ADD: 리스트 화면 생성 및 연결 #11